--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -28,7 +28,7 @@ import Newsletter from "@site/src/components/Newsletter";
 
 ## The Problem Nobody's Solving
 
-AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users daily. When these systems fail, the consequences aren't theoretical—they're financial, legal, and reputational.
+AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users daily. When these systems fail, the consequences are not theoretical — they are financial, legal, and reputational.
 
 Yet most AI engineers graduate without understanding:
 - How adversaries manipulate model predictions
@@ -37,9 +37,9 @@ Yet most AI engineers graduate without understanding:
 - When federated learning preserves privacy
 - Which attacks scale with model capability
 
-**This isn't a gap. It's a crisis.**
+**This is not a gap. It is a crisis.**
 
-Traditional cybersecurity training doesn't cover AI attack surfaces. AI/ML courses ignore adversarial threat models. The result: production systems deployed by engineers who've never seen an adversarial example, never tested a jailbreak, never quantified model risk.
+Traditional cybersecurity training does not cover AI attack surfaces. AI and machine learning courses ignore adversarial threat models. The result is production systems deployed by engineers who have never seen an adversarial example, never tested a jailbreak, and never quantified model risk.
 
 **We built this program to fix that.**
 
@@ -47,20 +47,20 @@ Traditional cybersecurity training doesn't cover AI attack surfaces. AI/ML cours
 
 ## What This Program Actually Is
 
-This is not a certificate farm. This is not "10 hours to AI security mastery." This is not theory without implementation.
+This is not a certificate farm.  
+This is not “10 hours to AI security mastery.”  
+This is not theory without implementation.
 
 **This is a systems-level apprenticeship.**
 
 You will build production-grade security tools from scratch. You will break state-of-the-art models. You will design defenses that hold against real attacks. You will quantify risk in dollar terms executives understand.
 
 **Format:** Modular curriculum with cohort-based learning and self-paced options  
-**Duration:** 18–24 months for complete ladder  
+**Duration:** 18–24 months for the complete ladder  
 **Philosophy:** Build → Break → Defend → Govern  
-**Validation:** Project-based certification with oral defense  
+**Validation:** Project-based certification with oral defense
 
-This program assumes you're serious. It assumes you have time. It assumes you want to operate at the intersection of AI capability and security necessity.
-
-If you're looking for shortcuts, this isn't it.
+If you are looking for shortcuts, this program is not for you.
 
 ---
 
@@ -68,531 +68,201 @@ If you're looking for shortcuts, this isn't it.
 
 ### The Certification Ladder
 
-We've structured this as a progressive ladder where each level builds on the previous. You can stop at any certification or complete the full stack. Each level maps to a specific role and salary band in the current market.
+Each level produces **one enterprise-grade project** and maps directly to a real industry role.
 
-**Level 1: Associate**  
-C-AISSA (Certified AI Systems Security Associate)
+- **C-AISSA** — Certified AI Systems Security Associate  
+- **C-AMLE** — Certified Adversarial ML Engineer  
+- **C-LASS** — Certified LLM & Agent Security Specialist  
+- **C-AICDE** — Certified AI Cyber Defense Engineer  
+- **C-AIRTO** — Certified AI Red Team Operator  
+- **C-AIRGP** — Certified AI Risk & Governance Professional  
+- **C-AISA** — Certified AI Security Architect  
+- **C-PAISE** — Certified Principal AI Security Engineer  
 
-**Level 2: Specialist (Adversarial)**  
-C-AMLE (Certified Adversarial ML Engineer)
-
-**Level 3: Specialist (LLM/Agents)**  
-C-LASS (Certified LLM & Agent Security Specialist)
-
-**Level 4: Defense Engineer**  
-C-AICDE (Certified AI Cyber Defense Engineer)
-
-**Level 5: Offensive Operator**  
-C-AIRTO (Certified AI Red Team Operator)
-
-**Level 6: Governance Professional**  
-C-AIRGP (Certified AI Risk & Governance Professional)
-
-**Level 7: Security Architect**  
-C-AISA (Certified AI Security Architect)
-
-**Level 8: Principal Engineer**  
-C-PAISE (Certified Principal AI Security Engineer)
+You may stop at any level or complete the full ladder.
 
 ---
 
-## Detailed Curriculum
+## Detailed Curriculum (Project-Oriented)
 
-### Module 0: AI Systems Security Foundations
-
+### Module 0 — AI Systems Security Foundations  
 **Certification:** C-AISSA  
-**Timeline:** 2–4 weeks  
-**Prerequisites:** Basic ML knowledge, Python programming
+**Timeline:** 2–4 weeks
 
-**Core Competencies:**
-- Threat modeling for ML pipelines
-- Data poisoning attack vectors
-- Model supply chain security
-- Secure training infrastructure
-- Attack surface analysis
+**Enterprise Project:** Secure AI System Threat Model
 
-**Project Deliverable:**
-Secure ML Systems Baseline Report — A comprehensive security assessment of a production ML pipeline with documented vulnerabilities, threat models, and remediation roadmap.
+Students deliver a full security baseline for a production AI system, including:
+- Threat model
+- Attack surface map
+- Risk register
+- Remediation roadmap
 
-**Why This Matters:**
-Before you can defend AI systems, you must understand how they fail. This module teaches the systematic thinking that separates security engineers from developers who "add security later."
+**Outcome:**  
+> “I can explain how an AI system fails before it is attacked.”
 
 ---
 
-### Module 1: Adversarial Machine Learning
-
+### Module 1 — Adversarial Machine Learning  
 **Certification:** C-AMLE  
-**Timeline:** 8–10 weeks  
-**Prerequisites:** C-AISSA or equivalent ML security knowledge
+**Timeline:** 8–10 weeks
 
-**Core Competencies:**
-- Gradient-based attack algorithms (FGSM, PGD, C&W)
-- Evasion attacks across modalities (vision, audio, text)
-- Adversarial training techniques
-- Certified robustness methods
-- Attack transferability analysis
-- Robustness evaluation metrics
+**Enterprise Project:** Adversarial Robustness Evaluation Platform
 
-**Project Deliverables:**
+Students implement multiple adversarial attacks, evaluate transferability, and build a robustness dashboard with executive risk summaries.
 
-**Project 1: Adversarial Attack Framework**  
-Implement 5+ attack algorithms from research papers. Demonstrate fooling ImageNet classifiers with imperceptible perturbations. Document attack success rates, transferability, and computational cost.
-
-**Project 2: Robustness Evaluation Dashboard**  
-Build automated testing suite that evaluates model robustness across multiple attacks. Generate executive-level reports with risk quantification.
-
-**Why This Matters:**
-Computer vision powers autonomous vehicles, medical diagnosis, and security systems. If you can't evaluate robustness, you can't deploy safely. This module teaches the mathematics and engineering behind adversarial ML—the foundation of AI security.
-
-**Real-World Application:**
-- Security testing for facial recognition systems
-- Robustness validation for autonomous driving
-- Medical imaging adversarial detection
-- Content moderation system hardening
+**Outcome:**  
+> “I can measure and communicate model robustness under adversarial pressure.”
 
 ---
 
-### Module 2: LLM & Autonomous Agent Security
-
+### Module 2 — LLM & Autonomous Agent Security  
 **Certification:** C-LASS  
-**Timeline:** 8–10 weeks  
-**Prerequisites:** C-AISSA or equivalent
+**Timeline:** 8–10 weeks
 
-**Core Competencies:**
-- Prompt injection taxonomy and defenses
-- Jailbreak detection and prevention
-- Tool misuse in autonomous agents
-- Context manipulation attacks
-- Output filtering and guardrails
-- Agent containment strategies
-- Multi-turn attack chains
+**Enterprise Project:** LLM & Agent Security Gateway
 
-**Project Deliverables:**
+Students build a security layer for LLMs and autonomous agents including:
+- Prompt injection detection
+- Jailbreak prevention
+- Tool-use authorization
+- Runtime containment
+- Kill-switch enforcement
 
-**Project 1: Jailbreak Detection API**  
-Real-time detection system for prompt injection attacks. ML classifier + rule-based filters + semantic analysis. Must handle <100ms latency with <5% false positive rate.
+Performance targets:
+- Sub-100 millisecond latency
+- False positive rate below five percent
 
-**Project 2: Agent Containment System**  
-Build sandbox environment for autonomous agents with permission management, action logging, and kill switches. Demonstrate preventing tool misuse while maintaining agent functionality.
-
-**Why This Matters:**
-LLMs are the fastest-deployed AI technology in history. They're also the least understood from a security perspective. Prompt injection isn't a bug—it's a fundamental limitation of instruction-following models. This module teaches you to work within those constraints.
-
-**Real-World Application:**
-- Enterprise chatbot security
-- Customer service automation hardening
-- Autonomous agent deployment
-- LLM API security layers
+**Outcome:**  
+> “I can secure LLMs and agents operating in production.”
 
 ---
 
-### Module 3: AI-Powered Cyber Defense
-
+### Module 3 — AI-Powered Cyber Defense  
 **Certification:** C-AICDE  
-**Timeline:** 10–12 weeks  
-**Prerequisites:** C-AMLE or C-LASS
+**Timeline:** 10–12 weeks
 
-**Core Competencies:**
-- Deep learning for malware classification
-- Neural network-based intrusion detection
-- Anomaly detection in network traffic
-- Real-time inference at scale
-- Feature engineering for security data
-- Handling class imbalance in attack detection
-- False positive optimization
+**Enterprise Project:** AI Threat Detection System
 
-**Project Deliverables:**
+Students build a real-time ML-driven defense system such as:
+- Malware detection
+- Network intrusion detection
+- Behavioral anomaly detection
 
-**Project 1: Deep Learning Malware Detector**  
-CNN/RNN architecture that analyzes PE files and Android APKs. Static + dynamic feature extraction. Must achieve 95%+ detection on real malware datasets with <1% false positive rate.
+Performance targets:
+- Detection accuracy above ninety-five percent
+- Sub-millisecond inference latency on high-throughput traffic
 
-**Project 2: Transformer-Based Network IDS**  
-Real-time intrusion detection system using transformer architecture. Process 10Gbps traffic with <1ms latency. Detect novel attack patterns and 0-day exploits.
-
-**Why This Matters:**
-Traditional security tools can't keep pace with modern threats. AI-powered defense is the only scalable solution. But deploying ML in security operations requires understanding false positive economics, adversarial evasion, and operational constraints.
-
-**Real-World Application:**
-- SOC automation and threat detection
-- Endpoint protection platforms
-- Network security monitoring
-- Zero-day attack detection
+**Outcome:**  
+> “I can deploy AI systems that defend real environments at scale.”
 
 ---
 
-### Module 4: Offensive AI & Red Teaming
-
+### Module 4 — Offensive AI & Red Teaming  
 **Certification:** C-AIRTO  
-**Timeline:** 10–12 weeks  
-**Prerequisites:** C-AICDE or equivalent offensive security background
+**Timeline:** 10–12 weeks
 
-**Core Competencies:**
-- Reinforcement learning for penetration testing
-- Automated vulnerability discovery
-- Model extraction attacks
-- Data poisoning in production systems
-- Backdoor attacks and triggers
-- Supply chain compromise
-- Attack chain automation
+**Enterprise Project:** AI Red Team Automation Platform
 
-**Project Deliverables:**
+Students simulate real adversaries targeting AI systems through:
+- Model extraction
+- Data poisoning
+- Backdoor attacks
+- Prompt injection campaigns
 
-**Project 1: AI-Powered Penetration Testing Framework**  
-Reinforcement learning agent that navigates networks, identifies vulnerabilities, and exploits systems autonomously. Generate professional pentest reports with remediation guidance.
-
-**Project 2: Model Extraction & IP Theft System**  
-Demonstrate extracting production models via API queries. Implement defenses: rate limiting, query obfuscation, watermarking, fingerprinting.
-
-**Why This Matters:**
-You can't defend what you can't attack. Offensive AI combines traditional red teaming with ML-specific threats. Model extraction costs companies millions. Data poisoning corrupts training. Backdoors persist through deployment. This module teaches you to think like an attacker.
-
-**Real-World Application:**
-- AI red team operations at frontier labs
-- Security testing for ML-as-a-Service
-- IP protection for proprietary models
-- Adversarial resilience validation
+**Outcome:**  
+> “I can simulate realistic attackers against AI systems.”
 
 ---
 
-### Module 5: AI Governance, Risk & Compliance
-
+### Module 5 — AI Governance, Risk & Compliance  
 **Certification:** C-AIRGP  
-**Timeline:** 6–8 weeks  
-**Prerequisites:** Any Level 2–4 certification
+**Timeline:** 6–8 weeks
 
-**Core Competencies:**
-- Federated learning architecture
-- Differential privacy implementation
-- Homomorphic encryption for ML
-- Privacy-preserving computation
-- Regulatory compliance (GDPR, CCPA, AI Act)
-- Risk quantification frameworks
-- Audit trail design
+**Enterprise Project:** AI Governance & Risk Engine
 
-**Project Deliverables:**
+Students build a governance platform with:
+- Model lineage tracking
+- Risk scoring
+- Bias auditing
+- Regulatory mapping
+- Audit evidence generation
 
-**Project 1: Privacy-Preserving Federated Learning System**  
-Implement secure federated learning with differential privacy guarantees. Byzantine-robust aggregation. Demonstrate training on sensitive data without centralization.
-
-**Project 2: AI Governance & Risk Engine**  
-Compliance automation platform: model cards, data lineage tracking, bias auditing, risk scoring, regulatory reporting. Production-ready GRC tooling.
-
-**Why This Matters:**
-Privacy isn't optional anymore. Regulations are coming. Organizations need engineers who understand both the mathematics of privacy and the reality of compliance. This module bridges that gap.
-
-**Real-World Application:**
-- Healthcare AI compliance (HIPAA)
-- Financial services ML governance
-- European AI Act readiness
-- Cross-border data training
+**Outcome:**  
+> “I can translate AI security into regulatory and business language.”
 
 ---
 
-### Module 6: AI Security Architecture
-
+### Module 6 — AI Security Architecture  
 **Certification:** C-AISA  
-**Timeline:** 6–8 weeks  
-**Prerequisites:** Completion of Modules 1–5 or equivalent
+**Timeline:** 6–8 weeks
 
-**Core Competencies:**
-- Security architecture for AI systems
-- Threat modeling at scale
-- Risk quantification and economic analysis
-- Formal verification methods
-- Certified robustness proofs
-- Security-by-design principles
-- Failure mode analysis
+**Enterprise Projects:**
+- AI Threat Economics Simulator
+- Formal Robustness Certification Tool
 
-**Project Deliverables:**
+Students quantify risk in dollar terms and produce mathematically justified robustness guarantees.
 
-**Project 1: AI Threat Economics Simulator**  
-Build tool that quantifies attack ROI vs. defense costs. Monte Carlo simulation of attack scenarios. Executive dashboard showing risk in dollar terms.
-
-**Project 2: Formal Robustness Certification Tool**  
-Implement formal verification for neural networks using SMT solvers or abstract interpretation. Prove mathematical bounds on model robustness.
-
-**Why This Matters:**
-Architects make decisions that affect entire organizations. You need to speak in terms executives understand: dollars, risk probabilities, regulatory exposure. This module teaches you to design secure AI systems from the ground up.
-
-**Real-World Application:**
-- Enterprise AI security strategy
-- M&A technical due diligence
-- Security architecture review
-- Executive risk communication
+**Outcome:**  
+> “I can design secure AI systems from first principles.”
 
 ---
 
-### Module 7: Capstone Project
-
-**Certification:** C-PAISE (Principal AI Security Engineer)  
-**Timeline:** 4–6 months  
-**Prerequisites:** All previous modules completed
+### Module 7 — Principal Capstone  
+**Certification:** C-PAISE  
+**Timeline:** 4–6 months
 
 **Capstone Options:**
+- Zero-Trust AI Security Platform
+- Comprehensive AI Red Team Suite
+- Publishable Industry Benchmark
 
-**Option A: Zero-Trust AI Security Platform**  
-Full-stack SaaS product with model monitoring, threat detection, compliance dashboards, API security, and incident response automation. Production deployment required.
+**Mandatory:**
+- Production-grade system
+- Live demo
+- Full threat model
+- Executive briefing
+- Oral defense
 
-**Option B: Comprehensive AI Red Team Suite**  
-Unified platform combining all attack types: adversarial ML, prompt injection, data poisoning, model extraction. Automated reporting and risk scoring.
-
-**Option C: Industry Security Benchmark**  
-Novel research contribution: new attack method, defense technique, or evaluation framework. Must be publishable at top-tier security conference.
-
-**Requirements:**
-- Working system with production-grade code
-- Comprehensive threat model
-- Live demonstration to certification board
-- Executive summary and technical documentation
-- Oral defense answering adversarial questions
-
-**Why This Matters:**
-This is your portfolio centerpiece. The project that gets you hired, funded, or published. It demonstrates you can operate at principal engineer level: defining problems, architecting solutions, and delivering production systems.
-
-**Expected Outcome:**
-Engineers who complete the capstone are positioned for:
-- $300K–$500K base salaries at tech companies
-- Founding engineer roles at AI security startups
-- Independent consulting at $500–$1000/hour
-- Research positions at frontier AI labs
+**Outcome:**  
+> “I operate at principal or founder level in AI security.”
 
 ---
 
 ## Certification Validation Model
 
-We don't do multiple-choice exams. We don't do take-home tests you can outsource. We validate real capability.
+Every certification requires:
+1. Enterprise project delivery  
+2. Live attack and defense demonstration  
+3. Written threat model  
+4. Failure analysis  
+5. Oral defense before StFrancis Labs reviewers  
 
-**Every certification requires:**
-
-**1. Project Submission**  
-Working code with documentation. Must demonstrate technical depth and operational understanding.
-
-**2. Attack/Defense Demonstration**  
-Live demo showing your system under adversarial conditions. Prove it works when attacked.
-
-**3. Threat Model Documentation**  
-Written analysis of attack vectors, mitigations, and residual risk. Show strategic thinking.
-
-**4. Oral Defense**  
-30–60 minute technical interview. Defend your design decisions. Answer hard questions.
-
-**5. Failure Analysis**  
-Document what didn't work. Explain limitations. Demonstrate intellectual honesty.
-
-**Why This Model:**
-Anyone can memorize facts. We validate engineering judgment—the ability to make correct security decisions under uncertainty with incomplete information. That's what separates senior engineers from beginners.
-
----
-
-## Investment & Pricing
-
-### Cost Structure
-
-**Entry Level (Associate)**  
-$300–$600 per certification
-
-**Mid Level (Specialists)**  
-$800–$1,500 per certification
-
-**Senior Level (Architect)**  
-$2,000–$3,500
-
-**Principal Level (Capstone)**  
-$5,000–$10,000
-
-### Why These Prices
-
-This program is not priced for casual learners. It's priced for serious engineers, employers funding professional development, and founders building security teams.
-
-The pricing reflects:
-- Individualized code review and feedback
-- Oral examination by practicing security engineers
-- Small cohort sizes ensuring quality interaction
-- Industry-relevant projects with real-world impact
-- Certification value in job market (ROI in months, not years)
-
-**Corporate Training:** Volume discounts available for teams of 5+  
-**Academic Partnerships:** Reduced rates for university-sponsored cohorts  
-**Need-Based Assistance:** Limited scholarships for exceptional candidates
-
----
-
-## Who This Program Is For
-
-**You should apply if:**
-- You're an ML engineer who realizes security matters
-- You're a security engineer learning AI attack surfaces
-- You're building an AI product and need threat modeling
-- You're transitioning from traditional cybersecurity to AI
-- You're a researcher who wants industry-relevant skills
-- You want a credential that opens doors at frontier labs
-
-**You should NOT apply if:**
-- You want easy certifications for your resume
-- You're not willing to commit 10+ hours/week
-- You need hand-holding through basic programming
-- You expect guaranteed job placement
-- You're looking for theoretical knowledge without implementation
-
----
-
-## Market Positioning & Career Outcomes
-
-### What Makes This Different
-
-**Not a bootcamp promising six-figure jobs in 12 weeks.**  
-This is rigorous technical training for engineers who already have fundamentals.
-
-**Not academic theory divorced from practice.**  
-Every project has real-world application. Every technique is production-tested.
-
-**Not certification collection for resume padding.**  
-Each level represents genuine capability advancement with market value.
-
-### Expected Career Progression
-
-**After Module 0–1 (Associate/Adversarial ML):**  
-Junior AI Security Engineer: $100K–$150K
-
-**After Modules 2–3 (LLM Security/Cyber Defense):**  
-AI Security Engineer: $150K–$250K
-
-**After Modules 4–5 (Red Team/Governance):**  
-Senior AI Security Engineer: $200K–$350K
-
-**After Module 6 (Architect):**  
-AI Security Architect/Staff Engineer: $300K–$500K
-
-**After Module 7 (Principal/Capstone):**  
-Principal AI Security Engineer: $400K–$600K base  
-Founding Engineer: $200K–$300K + equity  
-Independent Consultant: $500–$1,500/hour
-
-**Or start your own AI security company.**
-
-These ranges reflect current market rates at tech companies, financial institutions, and well-funded startups. Total compensation including equity can significantly exceed base salary.
+No multiple-choice exams. No shortcuts.
 
 ---
 
 ## The StFrancis Labs Thesis
 
-### Why We Built This
-
-We founded StFrancis Labs on a simple premise:
-
 **Intelligence without control is a liability.**
 
-AI capability is accelerating. Security is not keeping pace. The gap creates systemic risk: deployed systems vulnerable to manipulation, extraction, and misuse. Organizations rush to adopt AI without understanding threat models. Engineers ship code without adversarial testing.
+AI systems learn, adapt, and act. Security cannot be bolted on later. It must be designed from first principles.
 
-This isn't sustainable.
-
-As AI systems grow more capable, security becomes foundational—not optional. You can't bolt security onto autonomous agents after deployment. You can't patch away prompt injection. You can't fix architectural vulnerabilities with monitoring.
-
-**Security must be designed in from first principles.**
-
-This program exists because the industry needs engineers who understand:
-- How AI systems fail under adversarial pressure
-- When theoretical attacks become practical threats  
-- Why certain architectures resist certain attacks
-- What security means in systems that learn and adapt
-
-We're not training security theater consultants. We're training engineers who can design, implement, and defend production AI systems that operate in hostile environments.
-
-**Because capability without security is recklessness.**
-
----
-
-## Application Process
-
-### How to Apply
-
-**Step 1: Technical Assessment**  
-Complete programming challenge demonstrating ML and security fundamentals. No time limit. Quality over speed.
-
-**Step 2: Project Portfolio Review**  
-Submit GitHub profile or equivalent. We want to see how you code, document, and think about problems.
-
-**Step 3: Technical Interview**  
-45-minute conversation about AI security, threat models, and your learning goals. No gotcha questions.
-
-**Step 4: Cohort Placement**  
-Based on background and availability. Cohorts start quarterly.
-
-**Timeline:** Rolling applications, 2-week decision process
-
----
-
-## Frequently Asked Questions
-
-**Q: Can I take individual modules without completing the full program?**  
-A: Yes. Each certification stands alone. Take what serves your goals.
-
-**Q: Is this self-paced or cohort-based?**  
-A: Both options available. Cohorts provide peer interaction and scheduled milestones. Self-paced offers flexibility for working professionals.
-
-**Q: Do I need a security background?**  
-A: No. But you need ML fundamentals and programming ability.
-
-**Q: Do I need an ML background?**  
-A: Yes. You should understand neural networks, training, and common architectures.
-
-**Q: What if I fail a certification exam?**  
-A: Retake after addressing feedback. No additional fee for first retake.
-
-**Q: Will this guarantee a job?**  
-A: No. We validate skills, not outcomes. But market demand for these skills is high.
-
-**Q: Can my employer sponsor my enrollment?**  
-A: Yes. We work with L&D teams on corporate training programs.
-
-**Q: Is there a refund policy?**  
-A: Yes. Full refund within 14 days if the program isn't right for you.
-
----
-
-## What Happens Next
-
-If you've read this far, you're taking this seriously. Good.
-
-The AI security skills gap is real. Organizations are deploying powerful systems without adequate security review. Engineers are shipping code they can't properly test. Executives are making risk decisions with incomplete information.
-
-This program gives you the skills to fix that.
-
-**You will learn to:**
-- Think adversarially about AI systems
-- Quantify risk in operational terms
-- Design defensible architectures
-- Communicate security to non-technical stakeholders
-- Operate at the frontier of AI safety
-
-**What we expect from you:**
-- Intellectual honesty about limitations
-- Willingness to be wrong and learn
-- Commitment to completing what you start
-- Ethical responsibility in applying these skills
-
-**What you get from us:**
-- Technical depth that passes peer review
-- Project feedback from practicing engineers
-- Certifications with market credibility
-- Network of AI security professionals
-- Skills that compound in value
+This program trains engineers who can:
+- Think adversarially
+- Design defensible systems
+- Quantify risk
+- Communicate with executives
+- Operate responsibly at scale
 
 ---
 
 ## Final Note
 
-This isn't easy. It's not meant to be.
+This program is difficult by design.
 
-We're training engineers to secure systems that most people don't fully understand. Systems that make autonomous decisions. Systems where failure cascades. Systems where getting security wrong has consequences measured in dollars, lawsuits, and headlines.
-
-If that sounds interesting—if that sounds like the work you want to do—apply.
-
-If it sounds overwhelming, consider whether you're ready for this responsibility.
+It exists for engineers willing to accept responsibility for securing systems that shape real outcomes in the world.
 
 **Security is the cost of intelligence.**
-
-Someone has to pay it. Make sure you're one of the people qualified to present the bill.
 
 ---
 
@@ -606,21 +276,11 @@ Someone has to pay it. Make sure you're one of the people qualified to present t
   slug="ai-security-engineer-bootcamp-and-certification-stfrancis-labs"
 />
 
----
-
-## Join the Discussion
-
-Questions about the curriculum? Critiques of the approach? Professional experiences with AI security?
-
-This is the space for serious technical discussion.
-
 <GiscusComments />
-
----
 
 <Newsletter
   title="StFrancis Labs Updates"
-  description="Weekly analysis on adversarial ML, LLM security vulnerabilities, and AI governance."
+  description="Weekly deep dives on adversarial ML, LLM security, and AI governance."
   buttonText="Subscribe"
   theme="secondary"
 />
