--- a/docs/AI Cybersecurity Engineer.mdx
+++ b/docs/AI Cybersecurity Engineer.mdx
@@ -26,15 +26,15 @@ import Newsletter from "@site/src/components/Newsletter";
 
 ---
 
-## The Problem Nobody's Solving
+## The Problem Nobody Is Solving
 
-AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users daily. When these systems fail, the consequences are not theoretical — they are financial, legal, and reputational.
+AI systems now make autonomous decisions in production environments. They approve loans, diagnose diseases, control infrastructure, and interact with millions of users every day. When these systems fail, the consequences are not theoretical — they are financial, legal, and reputational.
 
-Yet most AI engineers graduate without understanding:
+Yet many AI engineers graduate without understanding:
 - How adversaries manipulate model predictions
 - Why prompt injection defeats LLM guardrails
-- How to verify robustness mathematically
-- When federated learning preserves privacy
+- How robustness can be verified mathematically
+- When federated learning actually preserves privacy
 - Which attacks scale with model capability
 
 **This is not a gap. It is a crisis.**
@@ -48,15 +48,15 @@ Traditional cybersecurity training does not cover AI attack surfaces. AI and mac
 ## What This Program Actually Is
 
 This is not a certificate farm.  
-This is not “10 hours to AI security mastery.”  
+This is not “ten hours to AI security mastery.”  
 This is not theory without implementation.
 
 **This is a systems-level apprenticeship.**
 
-You will build production-grade security tools from scratch. You will break state-of-the-art models. You will design defenses that hold against real attacks. You will quantify risk in dollar terms executives understand.
+You will build production-grade security tools from scratch. You will break state-of-the-art models. You will design defenses that hold under real attacks. You will quantify risk in terms executives understand.
 
 **Format:** Modular curriculum with cohort-based learning and self-paced options  
-**Duration:** 18–24 months for the complete ladder  
+**Duration:** Eighteen to twenty-four months for the complete ladder  
 **Philosophy:** Build → Break → Defend → Govern  
 **Validation:** Project-based certification with oral defense
 
@@ -68,14 +68,14 @@ If you are looking for shortcuts, this program is not for you.
 
 ### The Certification Ladder
 
-Each level produces **one enterprise-grade project** and maps directly to a real industry role.
+Each level produces **one enterprise-grade project** and maps directly to real industry roles.
 
 - **C-AISSA** — Certified AI Systems Security Associate  
 - **C-AMLE** — Certified Adversarial ML Engineer  
-- **C-LASS** — Certified LLM & Agent Security Specialist  
+- **C-LASS** — Certified LLM and Agent Security Specialist  
 - **C-AICDE** — Certified AI Cyber Defense Engineer  
 - **C-AIRTO** — Certified AI Red Team Operator  
-- **C-AIRGP** — Certified AI Risk & Governance Professional  
+- **C-AIRGP** — Certified AI Risk and Governance Professional  
 - **C-AISA** — Certified AI Security Architect  
 - **C-PAISE** — Certified Principal AI Security Engineer  
 
@@ -87,7 +87,7 @@ You may stop at any level or complete the full ladder.
 
 ### Module 0 — AI Systems Security Foundations  
 **Certification:** C-AISSA  
-**Timeline:** 2–4 weeks
+**Timeline:** Two to four weeks
 
 **Enterprise Project:** Secure AI System Threat Model
 
@@ -104,7 +104,7 @@ Students deliver a full security baseline for a production AI system, including:
 
 ### Module 1 — Adversarial Machine Learning  
 **Certification:** C-AMLE  
-**Timeline:** 8–10 weeks
+**Timeline:** Eight to ten weeks
 
 **Enterprise Project:** Adversarial Robustness Evaluation Platform
 
@@ -115,51 +115,51 @@ Students implement multiple adversarial attacks, evaluate transferability, and b
 
 ---
 
-### Module 2 — LLM & Autonomous Agent Security  
+### Module 2 — LLM and Autonomous Agent Security  
 **Certification:** C-LASS  
-**Timeline:** 8–10 weeks
+**Timeline:** Eight to ten weeks
 
-**Enterprise Project:** LLM & Agent Security Gateway
+**Enterprise Project:** LLM and Agent Security Gateway
 
-Students build a security layer for LLMs and autonomous agents including:
+Students build a security layer for LLMs and autonomous agents, including:
 - Prompt injection detection
 - Jailbreak prevention
 - Tool-use authorization
 - Runtime containment
 - Kill-switch enforcement
 
-Performance targets:
-- Sub-100 millisecond latency
+**Performance targets:**
+- Sub one-hundred millisecond response latency
 - False positive rate below five percent
 
 **Outcome:**  
-> “I can secure LLMs and agents operating in production.”
+> “I can secure LLMs and autonomous agents operating in production.”
 
 ---
 
 ### Module 3 — AI-Powered Cyber Defense  
 **Certification:** C-AICDE  
-**Timeline:** 10–12 weeks
+**Timeline:** Ten to twelve weeks
 
 **Enterprise Project:** AI Threat Detection System
 
-Students build a real-time ML-driven defense system such as:
+Students build a real-time, machine-learning-driven defense system such as:
 - Malware detection
 - Network intrusion detection
 - Behavioral anomaly detection
 
-Performance targets:
+**Performance targets:**
 - Detection accuracy above ninety-five percent
-- Sub-millisecond inference latency on high-throughput traffic
+- Sub-millisecond inference latency on high-throughput network traffic
 
 **Outcome:**  
 > “I can deploy AI systems that defend real environments at scale.”
 
 ---
 
-### Module 4 — Offensive AI & Red Teaming  
+### Module 4 — Offensive AI and Red Teaming  
 **Certification:** C-AIRTO  
-**Timeline:** 10–12 weeks
+**Timeline:** Ten to twelve weeks
 
 **Enterprise Project:** AI Red Team Automation Platform
 
@@ -174,13 +174,13 @@ Students simulate real adversaries targeting AI systems through:
 
 ---
 
-### Module 5 — AI Governance, Risk & Compliance  
+### Module 5 — AI Governance, Risk, and Compliance  
 **Certification:** C-AIRGP  
-**Timeline:** 6–8 weeks
+**Timeline:** Six to eight weeks
 
-**Enterprise Project:** AI Governance & Risk Engine
+**Enterprise Project:** AI Governance and Risk Engine
 
-Students build a governance platform with:
+Students build a governance platform featuring:
 - Model lineage tracking
 - Risk scoring
 - Bias auditing
@@ -194,13 +194,13 @@ Students build a governance platform with:
 
 ### Module 6 — AI Security Architecture  
 **Certification:** C-AISA  
-**Timeline:** 6–8 weeks
+**Timeline:** Six to eight weeks
 
 **Enterprise Projects:**
 - AI Threat Economics Simulator
 - Formal Robustness Certification Tool
 
-Students quantify risk in dollar terms and produce mathematically justified robustness guarantees.
+Students quantify risk in monetary terms and produce mathematically justified robustness guarantees.
 
 **Outcome:**  
 > “I can design secure AI systems from first principles.”
@@ -209,17 +209,17 @@ Students quantify risk in dollar terms and produce mathematically justified robu
 
 ### Module 7 — Principal Capstone  
 **Certification:** C-PAISE  
-**Timeline:** 4–6 months
+**Timeline:** Four to six months
 
 **Capstone Options:**
 - Zero-Trust AI Security Platform
 - Comprehensive AI Red Team Suite
 - Publishable Industry Benchmark
 
-**Mandatory:**
+**Mandatory requirements:**
 - Production-grade system
-- Live demo
-- Full threat model
+- Live demonstration
+- Complete threat model
 - Executive briefing
 - Oral defense
 
@@ -280,7 +280,7 @@ It exists for engineers willing to accept responsibility for securing systems th
 
 <Newsletter
   title="StFrancis Labs Updates"
-  description="Weekly deep dives on adversarial ML, LLM security, and AI governance."
+  description="Weekly deep dives on adversarial machine learning, LLM security, and AI governance."
   buttonText="Subscribe"
   theme="secondary"
 />
